--- a/ecg_app/templates/echo_results.html
+++ b/ecg_app/templates/echo_results.html
@@ -380,7 +380,7 @@
         }
     </style>
 </head>
-<body>
+<body class="gradient-bg">
     <div class="container">
         <!-- Header Section -->
         <div class="header-section">
